{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 230,
  "lineage": "641d6c61-ef5a-b0d2-c8ce-4c3c76a24d09",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "ha_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.11.80/28",
            "address_prefixes": [
              "172.27.11.80/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-fw-HA",
            "name": "snet-hub-sapm-palo-fw-HA",
            "resource_group_name": "rg-hub-sapm-scus",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-hub-sapm-scus"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "internal_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.10.0/28",
            "address_prefixes": [
              "172.27.10.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-internal",
            "name": "snet-hub-sapm-palo-internal",
            "resource_group_name": "rg-hub-sapm-scus",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-hub-sapm-scus"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.8.0/25",
            "address_prefixes": [
              "172.27.8.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-mgmt",
            "name": "snet-hub-sapm-mgmt",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-sapm-mgmt",
            "resource_group_name": "rg-hub-sapm-scus",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-hub-sapm-scus"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet-hub-sapm-palo-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.27.10.16/28",
            "address_prefixes": [
              "172.27.10.16/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-external",
            "name": "snet-hub-sapm-palo-external",
            "resource_group_name": "rg-hub-sapm-scus",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-hub-sapm-scus"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.27.8.0/22"
            ],
            "dns_servers": [
              "172.27.10.37",
              "172.27.10.38"
            ],
            "guid": "e593cf15-a717-4ed1-a3fd-8b58b1e2ebfa",
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus",
            "location": "southcentralus",
            "name": "vnet-hub-sapm-scus",
            "resource_group_name": "rg-hub-sapm-scus",
            "subnets": [
              "GatewaySubnet",
              "snet-hub-sapm-palo-fw-HA",
              "snet-hub-sapm-dmz",
              "snet-hub-sapm-palo-internal",
              "snet-hub-sapm-palo-external",
              "snet-hub-sapm-dns",
              "snet-hub-sapm-mgmt",
              "AzureBastionSubnet"
            ],
            "vnet_peerings": {
              "vnet-hub-sapm-scus-to-vnet-nonprod-sapm-spoke1-scus": "/subscriptions/041c5ead-6da0-4cde-ac13-77e0db4963e6/resourceGroups/rg-nonprod-sapm-spoke1-scus/providers/Microsoft.Network/virtualNetworks/vnet-nonprod-sapm-spoke1-scus"
            },
            "vnet_peerings_addresses": [
              "172.27.0.0/22"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ethernet0_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet01",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.10.25",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-external"
              }
            ],
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nic-ethernet01",
            "private_ip_address": "172.27.10.25",
            "private_ip_addresses": [
              "172.27.10.25"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.snet-hub-sapm-palo-external"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet01",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.10.26",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-external"
              }
            ],
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nic-ethernet01",
            "private_ip_address": "172.27.10.26",
            "private_ip_addresses": [
              "172.27.10.26"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.snet-hub-sapm-palo-external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ethernet0_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet02",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.10.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-internal"
              }
            ],
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nic-ethernet02",
            "private_ip_address": "172.27.10.5",
            "private_ip_addresses": [
              "172.27.10.5"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.internal_subnet"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet02",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.10.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-internal"
              }
            ],
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nic-ethernet02",
            "private_ip_address": "172.27.10.6",
            "private_ip_addresses": [
              "172.27.10.6"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.internal_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ethernet0_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet03",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.11.85",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-fw-HA"
              }
            ],
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nic-ethernet03",
            "private_ip_address": "172.27.11.85",
            "private_ip_addresses": [
              "172.27.11.85"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.ha_subnet"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet03",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.11.86",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-palo-fw-HA"
              }
            ],
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nic-ethernet03",
            "private_ip_address": "172.27.11.86",
            "private_ip_addresses": [
              "172.27.11.86"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.ha_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-management",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.8.85",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/publicIPAddresses/fw01-hub-sapm-scus-nic-management-pip",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-mgmt"
              }
            ],
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nic-management",
            "private_ip_address": "172.27.8.85",
            "private_ip_addresses": [
              "172.27.8.85"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "azurerm_public_ip.management",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.management_subnet"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-management",
            "internal_domain_name_suffix": "cxhzhzixu5iu3i53rnmldyxl5c.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.27.8.86",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/publicIPAddresses/fw02-hub-sapm-scus-nic-management-pip",
                "subnet_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/virtualNetworks/vnet-hub-sapm-scus/subnets/snet-hub-sapm-mgmt"
              }
            ],
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nic-management",
            "private_ip_address": "172.27.8.86",
            "private_ip_addresses": [
              "172.27.8.86"
            ],
            "resource_group_name": "rg-hub-sapm-scus"
          },
          "dependencies": [
            "azurerm_public_ip.management",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "ethernet0_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet01|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet01",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ethernet0_1",
            "azurerm_network_security_group.data",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.snet-hub-sapm-palo-external"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet01|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet01",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ethernet0_1",
            "azurerm_network_security_group.data",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.snet-hub-sapm-palo-external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "ethernet0_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet02|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet02",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ethernet0_2",
            "azurerm_network_security_group.data",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.internal_subnet"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet02|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet02",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ethernet0_2",
            "azurerm_network_security_group.data",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.internal_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "ethernet0_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet03|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-ethernet03",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ethernet0_3",
            "azurerm_network_security_group.data",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.ha_subnet"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet03|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-ethernet03",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ethernet0_3",
            "azurerm_network_security_group.data",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.ha_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-management|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-management",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw01-hub-sapm-scus-nic-management",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-management"
          },
          "dependencies": [
            "azurerm_network_interface.management",
            "azurerm_network_security_group.management",
            "azurerm_public_ip.management",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.management_subnet"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-management|/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-management",
            "network_interface_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkInterfaces/fw02-hub-sapm-scus-nic-management",
            "network_security_group_id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-management"
          },
          "dependencies": [
            "azurerm_network_interface.management",
            "azurerm_network_security_group.management",
            "azurerm_public_ip.management",
            "data.azurerm_resource_group.rg",
            "data.azurerm_subnet.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-allow-all",
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nsg-allow-all",
            "resource_group_name": "rg-hub-sapm-scus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-allow-all",
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nsg-allow-all",
            "resource_group_name": "rg-hub-sapm-scus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "data-inbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "data-outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw01-hub-sapm-scus-nsg-management",
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nsg-management",
            "resource_group_name": "rg-hub-sapm-scus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "management-inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.management",
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/networkSecurityGroups/fw02-hub-sapm-scus-nsg-management",
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nsg-management",
            "resource_group_name": "rg-hub-sapm-scus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "management-inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.management",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "fw01-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/publicIPAddresses/fw01-hub-sapm-scus-nic-management-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.225.151.88",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "fw01-hub-sapm-scus-nic-management-pip",
            "resource_group_name": "rg-hub-sapm-scus",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "fw02-hub-sapm-scus",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/50e7cbbe-0c28-48ce-92c1-6e9d72f746c5/resourceGroups/rg-hub-sapm-scus/providers/Microsoft.Network/publicIPAddresses/fw02-hub-sapm-scus-nic-management-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.225.151.137",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "fw02-hub-sapm-scus-nic-management-pip",
            "resource_group_name": "rg-hub-sapm-scus",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}